--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install",
-    "compile": "tsc --noEmit"
+    "compile": "tsc --noEmit",
+    "run:prettier": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -25,10 +26,11 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "husky": "^8.0.0",
     "lint-staged": "^13.2.1",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "husky": "^8.0.0"
+    "vite": "^4.3.2"
   },
   "engines": {
     "node": "18.x",
